# duskfell-poc

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  HUMANS.md  README.md  package.json
animus/: Cargo.toml
animus/src/: engine.rs  intent_schema.rs  lib.rs  prompt.rs  provider.rs  scheduler.rs  transcript.rs
animus/src/provider/: mock.rs  openai_compatible.rs
animus/tests/: engine.rs
server/: AGENTS.md  Cargo.toml
server/data/: AGENTS.md  world.json
server/data/personas/: bram.json  maren.json
server/src/: AGENTS.md  admin_routes.rs  admission.rs  auth.rs  config.rs  config_tests.rs  content.rs  http_routes.rs  ingress.rs  journal.rs  main.rs  metrics.rs  metrics_routes.rs  npc.rs  persistence.rs  player_identity.rs  protocol.rs  readiness.rs  region_routing.rs  region_transfer_tokens.rs  resource_replay.rs  routes.rs  runtime.rs  runtime_assets.rs  runtime_paths.rs  session.rs  session_routes.rs  settlement.rs  sim.rs  spatial.rs  terrain.rs  terrain_chunks.rs  tick_loop.rs  ws.rs
server/src/config/: auth.rs  budget.rs  env.rs  network.rs  public_deployment.rs
server/src/config_tests/: auth.rs  env.rs  network.rs  public_deployment.rs  readiness.rs
server/src/content/: hash.rs  personas.rs  tests.rs  validation.rs
server/src/journal/: model.rs  tests.rs
server/src/metrics/: admission.rs  durability.rs  prometheus.rs  tests.rs  websocket.rs
server/src/metrics_routes/: runtime_metrics.rs
server/src/npc/: dialogue.rs  egress.rs  engine_bridge.rs  intent_pump.rs  speech.rs
server/src/persistence/: file_guard.rs  journal_loader.rs  (+2 more)
(+791 files in other folders)
