[package]
name = "sundermere-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
bevy_ecs = "0.14"
indexmap = "=2.2.6"
jsonwebtoken = { version = "9", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "=1.1.2"
sha2 = "0.10"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.5", features = ["fs", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "=1.10.0", features = ["v4", "serde"] }
